todolist padding and typography changes

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,3 +1,17 @@
+// Fonts
+$font-size-xl: 10rem;
+$font-size-lg: 5rem;
+$font-size-md: 2rem;
+$font-size-sm: 1.3rem;
+$font-size-xs: 1.1rem;
+
+@media only screen and (max-width: $bp-large) {
+	$font-size-xl: 6rem;
+	$font-size-lg: 4rem;
+	$font-size-md: 1.5rem;
+}
+
+
 html {
     font-family: 'Open Sans', sans-serif;
     font-size: 100%;
