--- a/sass/components/_greeting.scss
+++ b/sass/components/_greeting.scss
@@ -1,8 +1,8 @@
 .c-greeting {
-    font-size: $fses;
+    font-size: $font-size-sm;
     color: var(--fg);
 
     @media only screen and (max-width: $bp-large) {
-        font-size: $fss;
+        font-size: $font-size-md;
     }
 }
