--- a/sass/components/_list.scss
+++ b/sass/components/_list.scss
@@ -100,7 +100,7 @@
     }
     &__link {
         text-decoration: none;
-        font-size: $fses;
+        font-size: $font-size-sm;
         color: var(--fg);
         margin-top: 1px;
         padding: 6px 12px;
