--- a/sass/components/_weather.scss
+++ b/sass/components/_weather.scss
@@ -10,14 +10,14 @@
 
     &__temperature {
         &-value p {
-            font-size: $fss;
+            font-size: $font-size-md;
             font-weight: bolder;
             margin-left: 15px;
             color: var(--fg);
         }
 
         &-description p {
-            font-size: $fss;
+            font-size: $font-size-md;
             margin-left: 15px;
             color: var(--fg);
         }
